# identity_service

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  build.rs  diesel.toml
src/: main.rs  schema.rs
src/auth/: keys.rs  mod.rs  token.rs
src/common/: app_state.rs  env.rs
src/db/migrations/01_create_users/: up.sql
src/models/: status.rs  users.rs
src/proto/: auth.proto  presence.proto
src/routes/: users.rs
src/stubs/: auth.rs  mod.rs  presence.rs
src/token/: keys.rs
src/utils/: hash.rs  mod.rs  publish.rs
