[package]
name = "identity_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.1", features = ["full"]}
actix-web = "4.3.1"
actix-identity = "0.5.2"
chrono = {version = "0.4.24", features = ["serde"]}
dotenv = "0.15.0"
derive_more = "0.99.17"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
diesel = {version = "2.0.4", features = ["extras", "postgres"]}
diesel_migrations = "2.0.0"
jsonwebtoken = "8.3.0"
r2d2 = "0.8.10"
prost = "0.11.9"
tonic = "0.9.2"
ring = "0.16.20"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
uuid = {version = "1.3.3", features = ["serde", "v4"]}

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/main.rs"
